tests/lit/tcheck/conflicting_00.isa
// RUN: not %iii --batchmode %s | filecheck %s
// Copyright (C) 2023-2025 Intel Corporation

function F();
function F();
// CHECK: Type error: function `F` was previously defined
